# rooster

./: .gitignore  Cargo.toml  README.md  index.html  style.css  tailwind.config.js
.github/workflows/: deploy.yml
full-rooster/: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
full-rooster/src/: lib.rs
full-rooster/src/components/: form.rs  mod.rs
full-rooster/src/pages/: home.rs
public/: _redirects
src/: lib.rs  main.rs
src/components/: animated_view.rs  form.rs  gh_activity.rs  mod.rs  projects.rs
src/data/: resume.rs
src/pages/: home.rs  mod.rs  portfolio.rs  todo.rs
