[package]
name = "rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
serde_json = "1.0.140"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
